[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xenonmass"
version = "0.1"
authors = [{ name="Ricardo Peres", email="rperes@physik.uzh.ch"},]
description = "Convert xenon properties and prices."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
"Homepage" = "https://github.com/ricmperes/xenonmass"
"Bug Tracker" = "https://github.com/ricmperes/xenonmass/issues"